Fix display issue on Safari

--- a/src/Cable/Cable.module.css
+++ b/src/Cable/Cable.module.css
@@ -2,9 +2,6 @@
     --width: 1;
     --height: 1;
 
-    display: flex;
     width: calc(var(--width) * 10%);
     height: calc(var(--height) * 10%);
-    justify-content: center;
-    align-items: flex-start;
 }
